fix: fixed visibility issues

--- a/src/css/components/_recruitment.scss
+++ b/src/css/components/_recruitment.scss
@@ -127,7 +127,8 @@
     .operator-tags {
       background-color: _c(background-alt);
       border: solid 2px _c(border);
-      margin: 1px;
+      border-radius: 5px;
+      margin: 5px 0;
     }
 
     .operator-set {
